--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-{
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
-  }
-}
-
+  },
   "dependencies": {
     "chart.js": "^4.5.0",
     "lucide-react": "^0.542.0",
